--- a/codekit-config.json
+++ b/codekit-config.json
@@ -46,12 +46,12 @@
       "initialSize" : 509,
       "fileType" : 8192
     },
-    "\/public\/casestudy4_image2.html" : {
+    "\/public\/bio_josh-beckman.html" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/casestudy4_image2.html",
+      "inputAbbreviatedPath" : "\/public\/bio_josh-beckman.html",
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 2048
     },
@@ -88,12 +88,12 @@
       "initialSize" : 61231,
       "fileType" : 4096
     },
-    "\/public\/bio_josh-beckman.html" : {
+    "\/public\/casestudy4_image2.html" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/bio_josh-beckman.html",
+      "inputAbbreviatedPath" : "\/public\/casestudy4_image2.html",
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 2048
     },
@@ -137,17 +137,6 @@
       "initialSize" : 1723,
       "fileType" : 4096
     },
-    "\/public\/images\/logo_spectranetics.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/logo_spectranetics.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/logo_spectranetics.png",
-      "initialSize" : 4785,
-      "fileType" : 8192
-    },
     "\/public\/images\/foundation\/orbit\/timer-black.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -157,6 +146,17 @@
       "processed" : 0,
       "outputAbbreviatedPath" : "\/public\/images\/foundation\/orbit\/timer-black.png",
       "initialSize" : 527,
+      "fileType" : 8192
+    },
+    "\/public\/images\/logo_spectranetics.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/logo_spectranetics.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/logo_spectranetics.png",
+      "initialSize" : 4785,
       "fileType" : 8192
     },
     "\/public\/images\/foundation\/orbit\/left-arrow.png" : {
@@ -355,15 +355,6 @@
       "initialSize" : 52733,
       "fileType" : 4096
     },
-    "\/public\/casestudy5_image1.html" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/casestudy5_image1.html",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2048
-    },
     "\/public\/images\/logo_terumo.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -374,6 +365,15 @@
       "outputAbbreviatedPath" : "\/public\/images\/logo_terumo.png",
       "initialSize" : 2510,
       "fileType" : 8192
+    },
+    "\/public\/casestudy5_image1.html" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/casestudy5_image1.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
     },
     "\/public\/bio_justin-mcneil.html" : {
       "ignoreWasSetByUser" : 0,
@@ -415,17 +415,6 @@
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 2048
     },
-    "\/public\/images\/bg_h3-contact.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/bg_h3-contact.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/bg_h3-contact.png",
-      "initialSize" : 1324,
-      "fileType" : 8192
-    },
     "\/public\/images\/logo_pervasis.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -435,6 +424,17 @@
       "processed" : 0,
       "outputAbbreviatedPath" : "\/public\/images\/logo_pervasis.png",
       "initialSize" : 4432,
+      "fileType" : 8192
+    },
+    "\/public\/images\/bg_h3-contact.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/bg_h3-contact.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/bg_h3-contact.png",
+      "initialSize" : 1324,
       "fileType" : 8192
     },
     "\/public\/js\/respond.min.js" : {
@@ -646,17 +646,6 @@
       "initialSize" : 104717,
       "fileType" : 4096
     },
-    "\/public\/images\/casestudy4_image1.jpg" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/casestudy4_image1.jpg",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/casestudy4_image1.jpg",
-      "initialSize" : 26812,
-      "fileType" : 4096
-    },
     "\/public\/images\/bg_contact-tiled.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -667,6 +656,17 @@
       "outputAbbreviatedPath" : "\/public\/images\/bg_contact-tiled.png",
       "initialSize" : 1023,
       "fileType" : 8192
+    },
+    "\/public\/images\/casestudy4_image1.jpg" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/casestudy4_image1.jpg",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/casestudy4_image1.jpg",
+      "initialSize" : 26812,
+      "fileType" : 4096
     },
     "\/public\/images\/photo_erin-lacey@2x.jpg" : {
       "ignoreWasSetByUser" : 0,
@@ -712,6 +712,17 @@
       "initialSize" : 1149,
       "fileType" : 8192
     },
+    "\/public\/images\/bg_figure-tiled.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/bg_figure-tiled.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/bg_figure-tiled.png",
+      "initialSize" : 1139,
+      "fileType" : 8192
+    },
     "\/public\/images\/foundation\/orbit\/pause-black.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -732,17 +743,6 @@
       "processed" : 0,
       "outputAbbreviatedPath" : "\/public\/images\/slide_arrow-left.png",
       "initialSize" : 1608,
-      "fileType" : 8192
-    },
-    "\/public\/images\/bg_figure-tiled.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/bg_figure-tiled.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/bg_figure-tiled.png",
-      "initialSize" : 1139,
       "fileType" : 8192
     },
     "\/public\/images\/foundation\/orbit\/rotator-black.png" : {
@@ -828,6 +828,17 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
+    "\/public\/images\/photo_josh-beckman.jpg" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/photo_josh-beckman.jpg",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/photo_josh-beckman.jpg",
+      "initialSize" : 28058,
+      "fileType" : 4096
+    },
     "\/public\/images\/640x140.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -839,6 +850,17 @@
       "initialSize" : 2479,
       "fileType" : 8192
     },
+    "\/public\/images\/photo_gail-hadley@2x.jpg" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/photo_gail-hadley@2x.jpg",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/photo_gail-hadley@2x.jpg",
+      "initialSize" : 184168,
+      "fileType" : 4096
+    },
     "\/public\/images\/photo_mary-ramos.jpg" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -849,6 +871,15 @@
       "outputAbbreviatedPath" : "\/public\/images\/photo_mary-ramos.jpg",
       "initialSize" : 20042,
       "fileType" : 4096
+    },
+    "\/public\/index.html" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/index.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
     },
     "\/public\/css\/typography.less" : {
       "ieCompatibility" : 1,
@@ -867,26 +898,6 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
-    "\/public\/images\/photo_josh-beckman.jpg" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/photo_josh-beckman.jpg",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/photo_josh-beckman.jpg",
-      "initialSize" : 28058,
-      "fileType" : 4096
-    },
-    "\/public\/index.html" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/index.html",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2048
-    },
     "\/public\/images\/photo_justin-mcneil.jpg" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -896,17 +907,6 @@
       "processed" : 0,
       "outputAbbreviatedPath" : "\/public\/images\/photo_justin-mcneil.jpg",
       "initialSize" : 22732,
-      "fileType" : 4096
-    },
-    "\/public\/images\/photo_gail-hadley@2x.jpg" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/photo_gail-hadley@2x.jpg",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/photo_gail-hadley@2x.jpg",
-      "initialSize" : 184168,
       "fileType" : 4096
     },
     "\/public\/images\/bg_circle_result_sm.png" : {
@@ -949,15 +949,15 @@
       "initialSize" : 31257,
       "fileType" : 4096
     },
-    "\/public\/images\/foundation\/orbit\/mask-black.png" : {
+    "\/public\/images\/logo_medrad.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/foundation\/orbit\/mask-black.png",
+      "inputAbbreviatedPath" : "\/public\/images\/logo_medrad.png",
       "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/foundation\/orbit\/mask-black.png",
-      "initialSize" : 527,
+      "outputAbbreviatedPath" : "\/public\/images\/logo_medrad.png",
+      "initialSize" : 2566,
       "fileType" : 8192
     },
     "\/public\/bio_gail-hadley.html" : {
@@ -980,26 +980,15 @@
       "initialSize" : 2541,
       "fileType" : 8192
     },
-    "\/public\/images\/logo_medrad.png" : {
+    "\/public\/images\/foundation\/orbit\/mask-black.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/logo_medrad.png",
+      "inputAbbreviatedPath" : "\/public\/images\/foundation\/orbit\/mask-black.png",
       "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/logo_medrad.png",
-      "initialSize" : 2566,
-      "fileType" : 8192
-    },
-    "\/public\/images\/logo_gore.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/logo_gore.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/logo_gore.png",
-      "initialSize" : 5122,
+      "outputAbbreviatedPath" : "\/public\/images\/foundation\/orbit\/mask-black.png",
+      "initialSize" : 527,
       "fileType" : 8192
     },
     "\/logo\/vascore-logo.png" : {
@@ -1011,6 +1000,17 @@
       "processed" : 0,
       "outputAbbreviatedPath" : "\/logo\/vascore-logo.png",
       "initialSize" : 9390,
+      "fileType" : 8192
+    },
+    "\/public\/images\/logo_gore.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/logo_gore.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/logo_gore.png",
+      "initialSize" : 5122,
       "fileType" : 8192
     },
     "\/public\/images\/logo_proteon.png" : {
@@ -1073,6 +1073,15 @@
       "outputAbbreviatedPath" : "\/public\/images\/vascore-logo.png",
       "initialSize" : 7190,
       "fileType" : 8192
+    },
+    "\/public\/bio_ritu-shrestha.html" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/bio_ritu-shrestha.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
     },
     "\/public\/images\/photo_justin-mcneil@2x.jpg" : {
       "ignoreWasSetByUser" : 0,
@@ -1228,16 +1237,22 @@
       "initialSize" : 1307,
       "fileType" : 8192
     },
-    "\/public\/images\/logo_abbott.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
+    "\/public\/css\/bootstrap.less" : {
+      "ieCompatibility" : 1,
+      "inputAbbreviatedPath" : "\/public\/css\/bootstrap.less",
+      "outputAbbreviatedPath" : "\/public\/css\/bootstrap.css",
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/logo_abbott.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/logo_abbott.png",
-      "initialSize" : 2805,
-      "fileType" : 8192
+      "strictUnits" : 0,
+      "relativeURLS" : 0,
+      "ignore" : 1,
+      "strictImports" : 0,
+      "ignoreWasSetByUser" : 0,
+      "shouldRunBless" : 0,
+      "hidden" : 0,
+      "strictMath" : 0,
+      "outputStyle" : 0,
+      "fileType" : 1,
+      "debugStyle" : 0
     },
     "\/public\/js\/modernizr-2.6.2-min.js" : {
       "ignoreWasSetByUser" : 0,
@@ -1259,6 +1274,17 @@
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 2048
     },
+    "\/public\/images\/logo_abbott.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/logo_abbott.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/logo_abbott.png",
+      "initialSize" : 2805,
+      "fileType" : 8192
+    },
     "\/public\/images\/infographic-circ-orange.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -1278,23 +1304,6 @@
       "strictUnits" : 0,
       "relativeURLS" : 0,
       "ignore" : 0,
-      "strictImports" : 0,
-      "ignoreWasSetByUser" : 0,
-      "shouldRunBless" : 0,
-      "hidden" : 0,
-      "strictMath" : 0,
-      "outputStyle" : 0,
-      "fileType" : 1,
-      "debugStyle" : 0
-    },
-    "\/public\/css\/bootstrap.less" : {
-      "ieCompatibility" : 1,
-      "inputAbbreviatedPath" : "\/public\/css\/bootstrap.less",
-      "outputAbbreviatedPath" : "\/public\/css\/bootstrap.css",
-      "outputPathIsSetByUser" : 0,
-      "strictUnits" : 0,
-      "relativeURLS" : 0,
-      "ignore" : 1,
       "strictImports" : 0,
       "ignoreWasSetByUser" : 0,
       "shouldRunBless" : 0,
@@ -1513,6 +1522,15 @@
       "initialSize" : 1573,
       "fileType" : 8192
     },
+    "\/public\/bio_sandra-croteau.html" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/bio_sandra-croteau.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
+    },
     "\/public\/images\/logo_cook-medical.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -1523,15 +1541,6 @@
       "outputAbbreviatedPath" : "\/public\/images\/logo_cook-medical.png",
       "initialSize" : 4108,
       "fileType" : 8192
-    },
-    "\/public\/bio_sandra-croteau.html" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/bio_sandra-croteau.html",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2048
     }
   },
   "manualImportLinks" : [
